tests/pp-fail/error_directive_esc.fl
\error "this is a string\nwith an escape sequence"
